--- a/public/course.html
+++ b/public/course.html
@@ -157,6 +157,7 @@
 						<button type="unflag" class="btn btn-danger" data-toggle="modal" data-target="#unflagModal">Unflag Course</button>
 						<button type="enrol" class="btn btn-primary pull-right">Enrol</button>
 						<button type="report" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Report</button>
+						<button type="delete" class="btn btn-danger">Delete</button>
 						<h3 class="text-center">{{title}}</h3>
 						<div class="text-center rating">
 							<a href="#reviews">
