--- a/public/edit-profile.html
+++ b/public/edit-profile.html
@@ -113,7 +113,7 @@
 								<input type="text" class="form-control" name="country" id="country" ng-model="country">
 							</div>
 						</div>
-						<div class="col-sm-offset-4 col-sm-4">
+						<div class="col-sm-offset-7 col-sm-5" id="buttons">
 							<button type="button" class="btn btn-default" ng-click="backToProfile()">Cancel</button>
 							<button type="submit" class="btn btn-primary" ng-disabled="editProfileForm.$invalid || isInvalid || screenNameInvalid || screenNameFound">Save</button>
 						</div>
