--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
       <script src="scripts/app.js"></script>
       <script src="scripts/navbar.js"></script>
+	  <script src="scripts/facebooklogin.js"></script>
       <link rel="stylesheet" href="css/style.css">
       <script>
        $(document).ready(function(){
