--- a/public/edit-profile.html
+++ b/public/edit-profile.html
@@ -84,8 +84,17 @@
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3" for="contactEmail">Contact Email:</label>
-							<div class="col-sm-8" data-toggle="tooltip" title="Used as contact info to public">
-								<input type="email" name="contactEmail" class="form-control" id="contactEmail" ng-model="contactEmail" required>
+							<div class="col-sm-8">
+								<div class="row">
+									<div class="col-sm-7" data-toggle="tooltip" title="Used as contact info to public">
+										<input type="email" name="contactEmail" class="form-control" id="contactEmail" ng-model="contactEmail" required>
+									</div>
+									<div class="col-sm-5">
+										<div class="checkbox">
+											<label><input type="checkbox" name="isPublicEmail" ng-model="isPublicEmail" ng-checked="isPublicEmail">Show on profile</label>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="form-group">
@@ -97,7 +106,7 @@
 									</div>
 									<div class="col-sm-5">
 										<div class="checkbox">
-											<label><input type="checkbox" name="isPublic" ng-model="isPublic" ng-disabled="phone==''" ng-checked="isPublic">Show to public</label>
+											<label><input type="checkbox" name="isPublicPhone" ng-model="isPublicPhone" ng-disabled="phone==''" ng-checked="isPublicPhone">Show on profile</label>
 										</div>
 									</div>
 								</div>
