--- a/public/navbar.html
+++ b/public/navbar.html
@@ -64,14 +64,13 @@
 			<div class="form-group">
 				<label for="inputUsername" class="sr-only">Email</label>
 				<input type="email" name="email" ng-model="email" id="inputEmail" class="form-control" placeholder="Email" ng-model-options="{updateOn: 'blur'}" required>
-				<span ng-show="loginForm.email.$error.email">* Invalid email address.</span>
 			</div>
 			<div class="form-group">
 				<label for="inputPassword" class="sr-only">Password</label>
 				<input type="password" ng-model="password" id="inputPassword" class="form-control" placeholder="Password" required>
 			</div>
 			<div class="form-group text-center">
-				<button id="submit" class="btn btn-lg btn-primary" type="submit" ng-disabled="!loginForm.$valid">Login</button>
+				<button id="submit" class="btn btn-lg btn-primary" type="submit">Login</button>
 			</div>
 			<p ng-show="emailNotExist" ng-init="emailNotExist = false">* Email is not registered, please <a data-toggle="modal" href="#signupModal">sign up</a>.</p>
 			<p ng-show="passwordIncorrect" ng-init="passwordIncorrect = false">* Incorrect Password.</p>
@@ -104,7 +103,6 @@
 				<div class="form-group">
 					<label for="inputEmailSU" class="sr-only">Email</label>
 					<input type="email" name="email" class="form-control" id="inputEmailSU" ng-model="email" placeholder="Email Address" ng-model-options="{updateOn: 'blur'}" ng-change="emailExists()" required>
-					<span ng-show="signupForm.email.$error.email">* Invalid email address.</span>
 					<span ng-show="isInvalid" ng-init="isInvalid = false">* Email has been registered.</span>
 				</div>
 				<div class="form-group">
@@ -123,7 +121,7 @@
 					<span ng-show="screenNameFound" ng-init="screenNameFound = false">* Screen name has been registered.</span>
 				</div>
 				<div class="form-group text-center">
-					<button id="submitSU" class="btn btn-lg btn-primary" type="submit" ng-disabled="!signupForm.$valid || isInvalid || screenNameInvalid || screenNameFound || passwordNotMatch">Sign Up</button>
+					<button id="submitSU" class="btn btn-lg btn-primary" type="submit" ng-disabled="isInvalid || screenNameInvalid || screenNameFound || passwordNotMatch">Sign Up</button>
 				</div>
             </form>
          </div>
