--- a/public/navbar.html
+++ b/public/navbar.html
@@ -117,7 +117,7 @@
 				<div class="form-group">
 					<label for="inputUsernameSU" class="sr-only">Screen Name</label>
 					<input name="screenName" ng-model="screenName" class="form-control" ng-change="screenNameValidation()" ng-model-options="{updateOn: 'blur'}" id="inputScreenNameSU" placeholder="Screen Name">
-					<span ng-show="screenNameInvalid" ng-init="screenNameInvalid = false">* Screen name cannot contain any space.</span>
+					<span ng-show="screenNameInvalid" ng-init="screenNameInvalid = false">{{screenNameInvalidMsg}}</span>
 					<span ng-show="screenNameFound" ng-init="screenNameFound = false">* Screen name has been registered.</span>
 				</div>
 				<div class="form-group text-center">
